# z4j-fastapi

./: CHANGELOG-1.x-legacy.md  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/z4j_fastapi/: __init__.py  __main__.py  cli.py  declarative.py  extension.py  framework.py
tests/unit/: test_declarative.py  test_engine_discovery.py  test_resolve_config.py
