[project]
name = "z4j-fastapi"
version = "1.0.1"
description = "z4j FastAPI framework adapter (Apache 2.0)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "z4j contributors" }]
keywords = ["z4j", "fastapi", "celery", "task"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "z4j-core",
    "z4j-bare",
    "fastapi>=0.136.0",
]

[project.optional-dependencies]
celery = ["z4j-celery"]

[project.urls]
Changelog = "https://github.com/z4jdev/z4j-fastapi/blob/main/CHANGELOG.md"
Documentation = "https://z4j.dev"
Homepage = "https://z4j.com"
Issues = "https://github.com/z4jdev/z4j-fastapi/issues"
Source = "https://github.com/z4jdev/z4j-fastapi"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/z4j_fastapi"]
