[project]
name = "z4j-fastapi"
version = "1.1.2"
description = "z4j FastAPI framework adapter (Apache 2.0)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "z4j contributors" }]
keywords = ["z4j", "fastapi", "celery", "task"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    # Floors bumped to >=1.1.0 for the v1.1.0 ecosystem family
    # release. z4j-bare 1.1.0 fixes the schedule.fire dispatcher
    # path so brain-side scheduler ticks reach the queue engine
    # instead of failing at the agent. Operators on brain 1.1.0
    # + scheduler 1.1.0 with z4j-fastapi 1.0.x had every scheduled
    # task silently fail; this floor refuses that mixed install.
    "z4j-core>=1.1.0",
    # 1.1.2 floor: supervisor forever-retry + pidfile/SIGHUP for
    # ``z4j-fastapi restart``.
    "z4j-bare>=1.1.2",
    "fastapi>=0.136.0",
]

[project.optional-dependencies]
# Canonical engine bundles. `pip install z4j-fastapi[arq]` pulls
# the engine adapter AND its companion scheduler in one shot.
# arq is the most common pairing for async FastAPI stacks; celery
# remains supported for sync stacks.
celery   = ["z4j-celery>=1.0.2",   "z4j-celerybeat>=1.0.2"]
rq       = ["z4j-rq>=1.0.1",       "z4j-rqscheduler>=1.0.1"]
dramatiq = ["z4j-dramatiq>=1.0.1", "z4j-apscheduler>=1.0.1"]
huey     = ["z4j-huey>=1.0.1",     "z4j-hueyperiodic>=1.0.1"]
arq      = ["z4j-arq>=1.0.1",      "z4j-arqcron>=1.0.1"]
taskiq   = ["z4j-taskiq>=1.0.1",   "z4j-taskiqscheduler>=1.0.1"]
# Every engine in one shot.
all = [
    "z4j-celery>=1.0.2",   "z4j-celerybeat>=1.0.2",
    "z4j-rq>=1.0.1",       "z4j-rqscheduler>=1.0.1",
    "z4j-dramatiq>=1.0.1", "z4j-apscheduler>=1.0.1",
    "z4j-huey>=1.0.1",     "z4j-hueyperiodic>=1.0.1",
    "z4j-arq>=1.0.1",      "z4j-arqcron>=1.0.1",
    "z4j-taskiq>=1.0.1",   "z4j-taskiqscheduler>=1.0.1",
]

[project.scripts]
# 1.1.2+ console script. Both ``z4j-fastapi <subcommand>`` and
# ``python -m z4j_fastapi <subcommand>`` work and dispatch to the
# same code path (z4j_bare.cli.make_main_for_adapter('fastapi')).
z4j-fastapi = "z4j_fastapi.cli:main"

[project.urls]
Changelog = "https://github.com/z4jdev/z4j-fastapi/blob/main/CHANGELOG.md"
Documentation = "https://z4j.dev"
Homepage = "https://z4j.com"
Issues = "https://github.com/z4jdev/z4j-fastapi/issues"
Source = "https://github.com/z4jdev/z4j-fastapi"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/z4j_fastapi"]
